# splayApi

./: .dockerignore  API.md  DEPLOY.md  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
splay/: ARCHITECTURE.md  STUBS.md  __init__.py  cli.py
splay/api/: __init__.py  app.py  models.py  schemas.py  service.py
splay/bots/: __init__.py  evaluator.py  innovation_bot.py  personality.py  policy.py
splay/engine_core/: __init__.py  action.py  action_generator.py  corrections.py  effect_resolver.py  expression.py  reducer.py  state.py
splay/games/: __init__.py
splay/games/innovation/: __init__.py  cards.py  icons.py  setup.py  spec.py  state.py
splay/rule_compiler/: __init__.py  cache.py  compiler.py  prompts.py
splay/session/: __init__.py  game_loop.py  manager.py
splay/spec_schema/: __init__.py  effect_dsl.py  game_spec.py  validation.py
splay/tests/: __init__.py  conftest.py  test_api.py  test_api_schemas.py  test_bot.py  test_integration.py  test_reducer.py  test_spec_validation.py  test_vision.py
splay/vision/: __init__.py  processor.py  proposal.py  reconciler.py
