[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splay"
version = "0.1.0"
description = "Board Game Automa Engine - Photo-driven gameplay with AI opponents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Splay Team"}
]
keywords = ["board games", "automa", "ai", "innovation", "card games"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    # Core (no heavy deps for MVP)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "mypy>=1.0",
    "ruff>=0.1",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
]
vision = [
    # Future: CV dependencies
    # "opencv-python>=4.8",
    # "torch>=2.0",
    # "transformers>=4.30",
]
llm = [
    # Future: LLM dependencies
    # "anthropic>=0.18",
    # "openai>=1.0",
]
all = [
    "splay[dev,api]",
]

[project.urls]
Repository = "https://github.com/splay-team/splay"

[project.scripts]
splay = "splay.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splay*"]

[tool.pytest.ini_options]
testpaths = ["splay/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # Line length handled separately
